# 3DViewer_v1.0

./: README.md
src/: 3DViewer_v1_info.texi  Makefile
src/3DViewerBack/: 3DViewer.h  Makefile  fill_struct.c  remove_struct.c  rotate_struct.c  scale_struct.c  struct.h  translate_struct.c
src/3DViewerBack/matrix/: matrix.h  matrix_struct.h
src/3DViewerBack/matrix/operation_functions/: create_matrix.c  remove_matrix.c
src/3DViewerBack/tests/: 3dviewer_tests
src/3DViewerBack/tests/materials/: example
src/3DViewerFront/: CMakeLists.txt  mainwindow.cc  mainwindow.h  mainwindow.ui  openglwidget.cc  openglwidget.h
